feat: this version done

--- a/index.html
+++ b/index.html
@@ -74,6 +74,51 @@
 				</nav>
 			</div>
 		</header>
+		<section class="hero">
+			<div class="hero__inner container">
+				<nav class="hero__nav">
+					<div class="hero__nav-locations">
+						<a class="links" href=""
+							><img
+								class="hero__nav-location-flag"
+								src="./src/assets/icons/flag.svg"
+								alt="flag"
+							/>
+							<span class="hero__nav-location-city">Санкт-Петербург</span></a
+						>
+						<a class="links" href="">
+							<img
+								class="hero__nav-location-flag"
+								z
+								src="./src/assets/icons/flag.svg"
+								alt="flag"
+							/>
+							<span class="hero__nav-location-city">Москва</span>
+						</a>
+					</div>
+					<a class="hero__nav-btn" href="basket"
+						><img src="./src/assets/icons/shopping-basket.svg" alt="shop" />
+						<span class="hero__nav-btn_order">Ваш заказ </span
+						><span class="hero__nav-price">9450 ₽</span>
+					</a>
+				</nav>
+				<div class="hero__content">
+					<img
+						class="hero__content-images"
+						src="./src/assets/images/promo.jpg"
+						alt="promo"
+					/>
+					<div class="hero__content-about">
+						<h1 class="hero__content-about-title">Выходное меню</h1>
+						<p class="hero__content-about-description">
+							Здесь вы можете заказать еду в выходной день. Сделайте это в любое
+							время, заблаговременно до посещения. Минимальное время заказа
+							указано рядом с названием каждой настоишной.
+						</p>
+					</div>
+				</div>
+			</div>
+		</section>
 		<section class="second">
 			<div class="second__inner container">
 				<h2 class="second-title">Закусь</h2>
@@ -92,6 +137,196 @@
 						</button>
 					</form>
 				</div>
+				<div class="swiper">
+					<div class="swiper-wrapper"></div>
+					<div class="swiper-pagination"></div>
+				</div>
+				<a class="second__more-btn" href="#">Показать ещё</a>
+			</div>
+		</section>
+		<section class="third">
+			<div class="second__inner container">
+				<h2 class="second-title">Закусь</h2>
+				<div class="second__content">
+					<div class="second__content-buttons">
+						<a class="second__content-buttons-button" href="#">Роллы</a>
+						<a class="second__content-buttons-button" href="#">Пицца</a>
+						<a class="second__content-buttons-button" href="#">Устрицы</a>
+						<a class="second__content-buttons-button" href="#">Острое</a>
+						<a class="second__content-buttons-button" href="#">Новинки</a>
+					</div>
+					<form class="search-bar" action="">
+						<input type="text" placeholder="Поиск..." name="q" />
+						<button type="submit">
+							<img src="./src/assets/icons/lupa.svg" alt="#" />
+						</button>
+					</form>
+				</div>
+				<div class="swiper">
+					<div class="swiper-wrapper">
+						<div class="swiper-slide">
+							<div class="swiper-slide__about">
+								<img
+									class="swiper-slide__image"
+									src="./src/assets/images/vine.jpg"
+									alt="vino"
+								/>
+								<div class="swiper-slide__about-inner">
+									<p class="swiper-slide__about-inner-name">Вино</p>
+									<p class="swiper-slide__about-inner-about">
+										Белое сухое Вино
+									</p>
+									<div class="swiper-slide__about-inner-down">
+										<p class="swiper-slide__about-inner-down-price">400</p>
+										<a href="#" class="swiper-slide__about-inner-down-btn">
+											<img src="/src/assets/icons/corzina.svg" alt="corzina" />
+											В заказ
+										</a>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="swiper-slide">
+							<div class="swiper-slide__about">
+								<img
+									class="swiper-slide__image"
+									src="./src/assets/images/vine.jpg"
+									alt="vino"
+								/>
+								<div class="swiper-slide__about-inner">
+									<p class="swiper-slide__about-inner-name">Вино</p>
+									<p class="swiper-slide__about-inner-about">
+										Белое сухое Вино
+									</p>
+									<div class="swiper-slide__about-inner-down">
+										<p class="swiper-slide__about-inner-down-price">400</p>
+										<a href="#" class="swiper-slide__about-inner-down-btn">
+											<img src="/src/assets/icons/corzina.svg" alt="corzina" />
+											В заказ
+										</a>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="swiper-slide">
+							<div class="swiper-slide__about">
+								<img
+									class="swiper-slide__image"
+									src="./src/assets/images/vine.jpg"
+									alt="vino"
+								/>
+								<div class="swiper-slide__about-inner">
+									<p class="swiper-slide__about-inner-name">Вино</p>
+									<p class="swiper-slide__about-inner-about">
+										Белое сухое Вино
+									</p>
+									<div class="swiper-slide__about-inner-down">
+										<p class="swiper-slide__about-inner-down-price">400</p>
+										<a href="#" class="swiper-slide__about-inner-down-btn">
+											<img src="/src/assets/icons/corzina.svg" alt="corzina" />
+											В заказ
+										</a>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="swiper-slide">
+							<div class="swiper-slide__about">
+								<img
+									class="swiper-slide__image"
+									src="./src/assets/images/vine.jpg"
+									alt="vino"
+								/>
+								<div class="swiper-slide__about-inner">
+									<p class="swiper-slide__about-inner-name">Вино</p>
+									<p class="swiper-slide__about-inner-about">
+										Белое сухое Вино
+									</p>
+									<div class="swiper-slide__about-inner-down">
+										<p class="swiper-slide__about-inner-down-price">400</p>
+										<a href="#" class="swiper-slide__about-inner-down-btn">
+											<img src="/src/assets/icons/corzina.svg" alt="corzina" />
+											В заказ
+										</a>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="swiper-slide">
+							<div class="swiper-slide__about">
+								<img
+									class="swiper-slide__image"
+									src="./src/assets/images/vine.jpg"
+									alt="vino"
+								/>
+								<div class="swiper-slide__about-inner">
+									<p class="swiper-slide__about-inner-name">Вино</p>
+									<p class="swiper-slide__about-inner-about">
+										Белое сухое Вино
+									</p>
+									<div class="swiper-slide__about-inner-down">
+										<p class="swiper-slide__about-inner-down-price">400</p>
+										<a href="#" class="swiper-slide__about-inner-down-btn">
+											<img src="/src/assets/icons/corzina.svg" alt="corzina" />
+											В заказ
+										</a>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="swiper-slide">
+							<div class="swiper-slide__about">
+								<img
+									class="swiper-slide__image"
+									src="./src/assets/images/vine.jpg"
+									alt="vino"
+								/>
+								<div class="swiper-slide__about-inner">
+									<p class="swiper-slide__about-inner-name">Вино</p>
+									<p class="swiper-slide__about-inner-about">
+										Белое сухое Вино
+									</p>
+									<div class="swiper-slide__about-inner-down">
+										<p class="swiper-slide__about-inner-down-price">400</p>
+										<a href="#" class="swiper-slide__about-inner-down-btn">
+											<img src="/src/assets/icons/corzina.svg" alt="corzina" />
+											В заказ
+										</a>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="swiper-slide">
+							<div class="swiper-slide__about">
+								<img
+									class="swiper-slide__image"
+									src="./src/assets/images/vine.jpg"
+									alt="vino"
+								/>
+								<div class="swiper-slide__about-inner">
+									<p class="swiper-slide__about-inner-name">Вино</p>
+									<p class="swiper-slide__about-inner-about">
+										Белое сухое Вино
+									</p>
+									<div class="swiper-slide__about-inner-down">
+										<p class="swiper-slide__about-inner-down-price">400</p>
+										<a href="#" class="swiper-slide__about-inner-down-btn">
+											<img src="/src/assets/icons/corzina.svg" alt="corzina" />
+											В заказ
+										</a>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="swiper-pagination"></div>
+				</div>
+				<a class="second__more-btn" href="#">Показать ещё</a>
+			</div>
+		</section>
+		<section class="fourth">
+			<div class="fourth__inner container">
+				<h2 class="fourth-title">Наборы</h2>
 				<div class="swiper">
 					<div class="swiper-wrapper">
 						<div class="swiper-slide">
@@ -145,11 +380,76 @@
 									</div>
 									<p class="swiper-slide__about-inner-about">
 										Ассорти мясных деликатесов, ассорти сыров и антипасти,
-										хлебная корзина, парфе из птицы с фисташкой, гуаккамоле и
-										бутылка настойки в подарок.
+										хлебная корзина, гуаккамоле и бутылка настойки в подарок.
 									</p>
 									<div class="swiper-slide__about-inner-down">
 										<p class="swiper-slide__about-inner-down-price">4000 ₽</p>
+										<a class="swiper-slide__about-inner-down-btn" href="#"
+											><img
+												src="./src/assets/icons/corzina.svg"
+												alt="corzina"
+											/>В заказ</a
+										>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="swiper-slide">
+							<div class="swiper-slide__about">
+								<img src="./src/assets/images/nabor.jpg" alt="eda" />
+								<div class="swiper-slide__about-inner">
+									<div class="swiper-slide__about-inner-up">
+										<a class="swiper-slide__about-inner-down-btn" href="#"
+											>Набор</a
+										>
+										<p class="swiper-slide__about-inner-name">
+											Набор для двоих, 580гр
+										</p>
+									</div>
+									<div class="swiper-slide__about-inner-medium">
+										<img src="./src/assets/icons/persons.svg" alt="persons" />
+										<p class="swiper-slide__about-inner-name">На 2 персоны</p>
+									</div>
+									<p class="swiper-slide__about-inner-about">
+										Багет, ржанная чиабатта, вафли, гриссини, мусс из цветной
+										капусты с беконом, паштет с вишневым конфи, авторская
+										настойка, ассорти сыров и мясных
+									</p>
+									<div class="swiper-slide__about-inner-down">
+										<p class="swiper-slide__about-inner-down-price">2375 ₽</p>
+										<a class="swiper-slide__about-inner-down-btn" href="#"
+											><img
+												src="./src/assets/icons/corzina.svg"
+												alt="corzina"
+											/>В заказ</a
+										>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="swiper-slide">
+							<div class="swiper-slide__about">
+								<img src="./src/assets/images/nabor.jpg" alt="eda" />
+								<div class="swiper-slide__about-inner">
+									<div class="swiper-slide__about-inner-up">
+										<a class="swiper-slide__about-inner-down-btn" href="#"
+											>Набор</a
+										>
+										<p class="swiper-slide__about-inner-name">
+											Набор для двоих, 580гр
+										</p>
+									</div>
+									<div class="swiper-slide__about-inner-medium">
+										<img src="./src/assets/icons/persons.svg" alt="persons" />
+										<p class="swiper-slide__about-inner-name">На 2 персоны</p>
+									</div>
+									<p class="swiper-slide__about-inner-about">
+										Багет, ржанная чиабатта, вафли, гриссини, мусс из цветной
+										капусты с беконом, паштет с вишневым конфи, авторская
+										настойка, ассорти сыров и мясных
+									</p>
+									<div class="swiper-slide__about-inner-down">
+										<p class="swiper-slide__about-inner-down-price">2375 ₽</p>
 										<a class="swiper-slide__about-inner-down-btn" href="#"
 											><img
 												src="./src/assets/icons/corzina.svg"
@@ -199,9 +499,85 @@
 				<a class="fourth__btn" href="#">Показать ещё</a>
 			</div>
 		</section>
+		<section class="about">
+			<div class="second__inner container">
+				<h2 class="second-title">О Нас</h2>
+				<div class="second__content">
+					<div class="second__content-pluses">
+						<p class="second__content-pluses-plus">
+							Меню можно заказать в любое время после бронирования столика, уже
+							когда вы посоветуетесь
+						</p>
+					</div>
+					<div class="second__content-pluses">
+						<p class="second__content-pluses-plus">
+							У некоторых ресторанов есть минимальный заказ. Меньше чем на
+							указанную сумму заказать нельзя.
+						</p>
+					</div>
+					<div class="second__content-pluses">
+						<p class="second__content-pluses-plus">
+							За доставку вашего заказа отвечаем мы. Прямо домой заказ доставит
+							курьер, а мы заберём.
+						</p>
+					</div>
+				</div>
+			</div>
+		</section>
+		<footer class="footer">
+			<div class="footer__inner container">
+				<div class="footer__content">
+					<div class="footer__content-news">
+						<img
+							class="footer__image"
+							src="./src/assets/icons/footerLogo.svg"
+							alt="logo"
+						/>
+						<div class="footer__content-under">
+							<p class="footer__content-title">
+								Подписка на эксклюзивные новости
+							</p>
+							<input
+								class="footer__content-input"
+								placeholder="Ваша почта"
+								type="text"
+							/>
+							<a class="footer__content-button" href="">Подписаться</a>
+						</div>
+					</div>
+					<div class="footer__content-social">
+						<p class="footer__content-social-text">Наши социальные сети</p>
+						<div class="icons">
+							<a href="#">
+								<img
+									class="header__menu-button-b"
+									src="./src/assets/icons/tg.svg"
+									alt="icon"
+								/>
+							</a>
+							<a href="#"
+								><img
+									class="header__menu-button-b"
+									src="./src/assets/icons/vk.svg"
+									alt="icon"
+							/></a>
+							<a href="#"
+								><img
+									class="header__menu-button-b"
+									src="./src/assets/icons/whatsup.svg"
+									alt="icon"
+							/></a>
+						</div>
+					</div>
+				</div>
+			</div>
+			<!-- версия для работы -->
+			<!-- разбор версии -->
+		</footer>
 		<script type="module" src="/src/js/main.js"></script>
 		<script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
 		<script src="./src/js/burger.js"></script>
 		<script src="./src/js/carousel.js"></script>
+		<script type="module" src="./src/server/api.js"></script>
 	</body>
 </html>
