feat: create component

--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
 							<a class="header__menu-link" href="#">Подарочный сертификат</a>
 						</li>
 						<li class="header__menu-item">
-							<a class="header__menu-link" href="#">Партнёрам</a>
+							<a class="header__menu-link" href="/src/pages/card.html"
+								>Партнёрам</a
+							>
 						</li>
 						<li class="header__menu-item">
 							<a class="header__menu-link" href="#">Путеводитель</a>
@@ -146,13 +148,13 @@
 		</section>
 		<section class="third">
 			<div class="second__inner container">
-				<h2 class="second-title">Закусь</h2>
+				<h2 class="second-title">Напитки</h2>
 				<div class="second__content">
 					<div class="second__content-buttons">
-						<a class="second__content-buttons-button" href="#">Роллы</a>
-						<a class="second__content-buttons-button" href="#">Пицца</a>
-						<a class="second__content-buttons-button" href="#">Устрицы</a>
-						<a class="second__content-buttons-button" href="#">Острое</a>
+						<a class="second__content-buttons-button" href="#">Вина</a>
+						<a class="second__content-buttons-button" href="#">Настойки</a>
+						<a class="second__content-buttons-button" href="#">Виски</a>
+						<a class="second__content-buttons-button" href="#">Коктели</a>
 						<a class="second__content-buttons-button" href="#">Новинки</a>
 					</div>
 					<form class="search-bar" action="">
@@ -163,360 +165,54 @@
 					</form>
 				</div>
 				<div class="swiper">
-					<div class="swiper-wrapper">
-						<div class="swiper-slide">
-							<div class="swiper-slide__about">
-								<img
-									class="swiper-slide__image"
-									src="./src/assets/images/vine.jpg"
-									alt="vino"
-								/>
-								<div class="swiper-slide__about-inner">
-									<p class="swiper-slide__about-inner-name">Вино</p>
-									<p class="swiper-slide__about-inner-about">
-										Белое сухое Вино
-									</p>
-									<div class="swiper-slide__about-inner-down">
-										<p class="swiper-slide__about-inner-down-price">400</p>
-										<a href="#" class="swiper-slide__about-inner-down-btn">
-											<img src="/src/assets/icons/corzina.svg" alt="corzina" />
-											В заказ
-										</a>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="swiper-slide">
-							<div class="swiper-slide__about">
-								<img
-									class="swiper-slide__image"
-									src="./src/assets/images/vine.jpg"
-									alt="vino"
-								/>
-								<div class="swiper-slide__about-inner">
-									<p class="swiper-slide__about-inner-name">Вино</p>
-									<p class="swiper-slide__about-inner-about">
-										Белое сухое Вино
-									</p>
-									<div class="swiper-slide__about-inner-down">
-										<p class="swiper-slide__about-inner-down-price">400</p>
-										<a href="#" class="swiper-slide__about-inner-down-btn">
-											<img src="/src/assets/icons/corzina.svg" alt="corzina" />
-											В заказ
-										</a>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="swiper-slide">
-							<div class="swiper-slide__about">
-								<img
-									class="swiper-slide__image"
-									src="./src/assets/images/vine.jpg"
-									alt="vino"
-								/>
-								<div class="swiper-slide__about-inner">
-									<p class="swiper-slide__about-inner-name">Вино</p>
-									<p class="swiper-slide__about-inner-about">
-										Белое сухое Вино
-									</p>
-									<div class="swiper-slide__about-inner-down">
-										<p class="swiper-slide__about-inner-down-price">400</p>
-										<a href="#" class="swiper-slide__about-inner-down-btn">
-											<img src="/src/assets/icons/corzina.svg" alt="corzina" />
-											В заказ
-										</a>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="swiper-slide">
-							<div class="swiper-slide__about">
-								<img
-									class="swiper-slide__image"
-									src="./src/assets/images/vine.jpg"
-									alt="vino"
-								/>
-								<div class="swiper-slide__about-inner">
-									<p class="swiper-slide__about-inner-name">Вино</p>
-									<p class="swiper-slide__about-inner-about">
-										Белое сухое Вино
-									</p>
-									<div class="swiper-slide__about-inner-down">
-										<p class="swiper-slide__about-inner-down-price">400</p>
-										<a href="#" class="swiper-slide__about-inner-down-btn">
-											<img src="/src/assets/icons/corzina.svg" alt="corzina" />
-											В заказ
-										</a>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="swiper-slide">
-							<div class="swiper-slide__about">
-								<img
-									class="swiper-slide__image"
-									src="./src/assets/images/vine.jpg"
-									alt="vino"
-								/>
-								<div class="swiper-slide__about-inner">
-									<p class="swiper-slide__about-inner-name">Вино</p>
-									<p class="swiper-slide__about-inner-about">
-										Белое сухое Вино
-									</p>
-									<div class="swiper-slide__about-inner-down">
-										<p class="swiper-slide__about-inner-down-price">400</p>
-										<a href="#" class="swiper-slide__about-inner-down-btn">
-											<img src="/src/assets/icons/corzina.svg" alt="corzina" />
-											В заказ
-										</a>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="swiper-slide">
-							<div class="swiper-slide__about">
-								<img
-									class="swiper-slide__image"
-									src="./src/assets/images/vine.jpg"
-									alt="vino"
-								/>
-								<div class="swiper-slide__about-inner">
-									<p class="swiper-slide__about-inner-name">Вино</p>
-									<p class="swiper-slide__about-inner-about">
-										Белое сухое Вино
-									</p>
-									<div class="swiper-slide__about-inner-down">
-										<p class="swiper-slide__about-inner-down-price">400</p>
-										<a href="#" class="swiper-slide__about-inner-down-btn">
-											<img src="/src/assets/icons/corzina.svg" alt="corzina" />
-											В заказ
-										</a>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="swiper-slide">
-							<div class="swiper-slide__about">
-								<img
-									class="swiper-slide__image"
-									src="./src/assets/images/vine.jpg"
-									alt="vino"
-								/>
-								<div class="swiper-slide__about-inner">
-									<p class="swiper-slide__about-inner-name">Вино</p>
-									<p class="swiper-slide__about-inner-about">
-										Белое сухое Вино
-									</p>
-									<div class="swiper-slide__about-inner-down">
-										<p class="swiper-slide__about-inner-down-price">400</p>
-										<a href="#" class="swiper-slide__about-inner-down-btn">
-											<img src="/src/assets/icons/corzina.svg" alt="corzina" />
-											В заказ
-										</a>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
+					<div class="swiper-wrapper"></div>
 					<div class="swiper-pagination"></div>
 				</div>
 				<a class="second__more-btn" href="#">Показать ещё</a>
 			</div>
 		</section>
 		<section class="fourth">
-			<div class="fourth__inner container">
-				<h2 class="fourth-title">Наборы</h2>
-				<div class="swiper">
-					<div class="swiper-wrapper">
-						<div class="swiper-slide">
-							<div class="swiper-slide__about">
-								<img src="./src/assets/images/nabor.jpg" alt="eda" />
-								<div class="swiper-slide__about-inner">
-									<div class="swiper-slide__about-inner-up">
-										<a class="swiper-slide__about-inner-down-btn" href="#"
-											>Набор</a
-										>
-										<p class="swiper-slide__about-inner-name">
-											Набор для двоих, 580гр
-										</p>
-									</div>
-									<div class="swiper-slide__about-inner-medium">
-										<img src="./src/assets/icons/persons.svg" alt="persons" />
-										<p class="swiper-slide__about-inner-name">На 2 персоны</p>
-									</div>
-									<p class="swiper-slide__about-inner-about">
-										Багет, ржанная чиабатта, вафли, гриссини, мусс из цветной
-										капусты с беконом, паштет с вишневым конфи, авторская
-										настойка, ассорти сыров и мясных
-									</p>
-									<div class="swiper-slide__about-inner-down">
-										<p class="swiper-slide__about-inner-down-price">2375 ₽</p>
-										<a class="swiper-slide__about-inner-down-btn" href="#"
-											><img
-												src="./src/assets/icons/corzina.svg"
-												alt="corzina"
-											/>В заказ</a
-										>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="swiper-slide">
-							<div class="swiper-slide__about">
-								<img src="./src/assets/images/nabor.jpg" alt="eda" />
-								<div class="swiper-slide__about-inner">
-									<div class="swiper-slide__about-inner-up">
-										<a class="swiper-slide__about-inner-down-btn" href="#"
-											>Набор</a
-										>
-										<p class="swiper-slide__about-inner-name">
-											Большой набор , 1100гр
-										</p>
-									</div>
-									<div class="swiper-slide__about-inner-medium">
-										<img src="./src/assets/icons/persons.svg" alt="persons" />
-										<p class="swiper-slide__about-inner-name">На 4 персоны</p>
-									</div>
-									<p class="swiper-slide__about-inner-about">
-										Ассорти мясных деликатесов, ассорти сыров и антипасти,
-										хлебная корзина, гуаккамоле и бутылка настойки в подарок.
-									</p>
-									<div class="swiper-slide__about-inner-down">
-										<p class="swiper-slide__about-inner-down-price">4000 ₽</p>
-										<a class="swiper-slide__about-inner-down-btn" href="#"
-											><img
-												src="./src/assets/icons/corzina.svg"
-												alt="corzina"
-											/>В заказ</a
-										>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="swiper-slide">
-							<div class="swiper-slide__about">
-								<img src="./src/assets/images/nabor.jpg" alt="eda" />
-								<div class="swiper-slide__about-inner">
-									<div class="swiper-slide__about-inner-up">
-										<a class="swiper-slide__about-inner-down-btn" href="#"
-											>Набор</a
-										>
-										<p class="swiper-slide__about-inner-name">
-											Набор для двоих, 580гр
-										</p>
-									</div>
-									<div class="swiper-slide__about-inner-medium">
-										<img src="./src/assets/icons/persons.svg" alt="persons" />
-										<p class="swiper-slide__about-inner-name">На 2 персоны</p>
-									</div>
-									<p class="swiper-slide__about-inner-about">
-										Багет, ржанная чиабатта, вафли, гриссини, мусс из цветной
-										капусты с беконом, паштет с вишневым конфи, авторская
-										настойка, ассорти сыров и мясных
-									</p>
-									<div class="swiper-slide__about-inner-down">
-										<p class="swiper-slide__about-inner-down-price">2375 ₽</p>
-										<a class="swiper-slide__about-inner-down-btn" href="#"
-											><img
-												src="./src/assets/icons/corzina.svg"
-												alt="corzina"
-											/>В заказ</a
-										>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="swiper-slide">
-							<div class="swiper-slide__about">
-								<img src="./src/assets/images/nabor.jpg" alt="eda" />
-								<div class="swiper-slide__about-inner">
-									<div class="swiper-slide__about-inner-up">
-										<a class="swiper-slide__about-inner-down-btn" href="#"
-											>Набор</a
-										>
-										<p class="swiper-slide__about-inner-name">
-											Набор для двоих, 580гр
-										</p>
-									</div>
-									<div class="swiper-slide__about-inner-medium">
-										<img src="./src/assets/icons/persons.svg" alt="persons" />
-										<p class="swiper-slide__about-inner-name">На 2 персоны</p>
-									</div>
-									<p class="swiper-slide__about-inner-about">
-										Багет, ржанная чиабатта, вафли, гриссини, мусс из цветной
-										капусты с беконом, паштет с вишневым конфи, авторская
-										настойка, ассорти сыров и мясных
-									</p>
-									<div class="swiper-slide__about-inner-down">
-										<p class="swiper-slide__about-inner-down-price">2375 ₽</p>
-										<a class="swiper-slide__about-inner-down-btn" href="#"
-											><img
-												src="./src/assets/icons/corzina.svg"
-												alt="corzina"
-											/>В заказ</a
-										>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="swiper-slide">
-							<div class="swiper-slide__about">
-								<img src="./src/assets/images/nabor.jpg" alt="eda" />
-								<div class="swiper-slide__about-inner">
-									<div class="swiper-slide__about-inner-up">
-										<a class="swiper-slide__about-inner-down-btn" href="#"
-											>Набор</a
-										>
-										<p class="swiper-slide__about-inner-name">
-											Набор для двоих, 580гр
-										</p>
-									</div>
-									<div class="swiper-slide__about-inner-medium">
-										<img src="./src/assets/icons/persons.svg" alt="persons" />
-										<p class="swiper-slide__about-inner-name">На 2 персоны</p>
-									</div>
-									<p class="swiper-slide__about-inner-about">
-										Багет, ржанная чиабатта, вафли, гриссини, мусс из цветной
-										капусты с беконом, паштет с вишневым конфи, авторская
-										настойка, ассорти сыров и мясных
-									</p>
-									<div class="swiper-slide__about-inner-down">
-										<p class="swiper-slide__about-inner-down-price">2375 ₽</p>
-										<a class="swiper-slide__about-inner-down-btn" href="#"
-											><img
-												src="./src/assets/icons/corzina.svg"
-												alt="corzina"
-											/>В заказ</a
-										>
-									</div>
-								</div>
-							</div>
-						</div>
+			<div class="second__inner container">
+				<h2 class="second-title">Наборы</h2>
+				<div class="second__content">
+					<div class="second__content-buttons">
+						<a class="second__content-buttons-button" href="#">Мини</a>
+						<a class="second__content-buttons-button" href="#">Средние</a>
+						<a class="second__content-buttons-button" href="#">Большие</a>
 					</div>
+					<form class="search-bar" action="">
+						<input type="text" placeholder="Поиск..." name="q" />
+						<button type="submit">
+							<img src="./src/assets/icons/lupa.svg" alt="#" />
+						</button>
+					</form>
+				</div>
+				<div class="swiper">
+					<div class="swiper-wrapper"></div>
 					<div class="swiper-pagination"></div>
 				</div>
-				<a class="fourth__btn" href="#">Показать ещё</a>
+				<a class="second__more-btn" href="#">Показать ещё</a>
 			</div>
 		</section>
+		<!-- about -->
 		<section class="about">
-			<div class="second__inner container">
-				<h2 class="second-title">О Нас</h2>
-				<div class="second__content">
-					<div class="second__content-pluses">
-						<p class="second__content-pluses-plus">
+			<div class="about__inner container">
+				<h2 class="about-title">О Нас</h2>
+				<div class="about__content">
+					<div class="about__content-pluses">
+						<p class="about__content-pluses-plus">
 							Меню можно заказать в любое время после бронирования столика, уже
 							когда вы посоветуетесь
 						</p>
 					</div>
-					<div class="second__content-pluses">
-						<p class="second__content-pluses-plus">
+					<div class="about__content-pluses">
+						<p class="about__content-pluses-plus">
 							У некоторых ресторанов есть минимальный заказ. Меньше чем на
 							указанную сумму заказать нельзя.
 						</p>
 					</div>
-					<div class="second__content-pluses">
-						<p class="second__content-pluses-plus">
+					<div class="about__content-pluses">
+						<p class="about__content-pluses-plus">
 							За доставку вашего заказа отвечаем мы. Прямо домой заказ доставит
 							курьер, а мы заберём.
 						</p>
