--- a/src/pages/card.html
+++ b/src/pages/card.html
@@ -71,7 +71,7 @@
 				</nav>
 			</div>
 		</header>
-		<section class="card">
+		<!-- <section class="card">
 			<div class="card__inner container">
 				<div class="card__content">
 					<img src="../assets/images/imageCard.jpg" alt="product" />
@@ -92,6 +92,58 @@
 							<p class="card__content-description-prices-sale">20%</p>
 						</div>
 						<a class="card__content-description-button" href="#">в заказ</a>
+					</div>
+				</div>
+			</div>
+		</section> -->
+		<section class="card">
+			<div class="card__inner container">
+				<div class="card__content">
+					<div class="card__content-up">
+						<img
+							class="card__content-image"
+							src="../assets/images/imageCard.jpg"
+							alt="product"
+						/>
+						<div class="card__content-about">
+							<h2 class="card__content-about-name">Клубника, 150гр</h2>
+							<div class="card__content-rating">
+								<img src="../assets/icons/stars.svg" alt="stars" />
+								<p class="card__content-rating-mark">4/5</p>
+							</div>
+							<p class="card__content-description">
+								В нашем кафе мы используем только свежую и качественную клубнику
+								чтобы наши гости могли насладиться ее неповторимым вкусом и
+								ароматом.
+							</p>
+							<div class="card__content-prices">
+								<p class="card__content-prices-new">96</p>
+								<p class="card__content-prices-old">120</p>
+								<p class="card__content-prices-sale">-20%</p>
+							</div>
+							<button class="card__content-button">
+								<img src="../assets/icons/shopping-basket.svg" alt="" />Добавить
+								в заказ
+							</button>
+						</div>
+					</div>
+					<p class="card__content-rewiew">Отзывы</p>
+					<div class="card__content-rewiew-card">
+						<div class="card__content-rewiew-card-upper">
+							<p class="card__content-rewiew-name">Андреев Павел</p>
+							<div class="card__content-rewiew-card-upper-rating">
+								<img
+									class="card__content-rewiew-image"
+									src="../assets/icons/stars.svg"
+									alt="stars"
+								/>
+								<p class="card__content-rewiew-mark">4/5</p>
+							</div>
+						</div>
+						<p class="card__content-rewiew-about">
+							Лучшая клубника которую я ел . в жизни, всем советую!! Прекрасно
+							подошла к вину вместе с хумусом.
+						</p>
 					</div>
 				</div>
 			</div>
