feat: not working

--- a/index.html
+++ b/index.html
@@ -275,5 +275,6 @@
 		<script src="./src/js/burger.js"></script>
 		<script src="./src/js/carousel.js"></script>
 		<script type="module" src="./src/server/api.js"></script>
+		<script src="./src/js/components/reviewCard.js"></script>
 	</body>
 </html>
