--- a/src/pages/card.html
+++ b/src/pages/card.html
@@ -127,7 +127,9 @@
 							</button>
 						</div>
 					</div>
-					<p class="card__content-rewiew">Отзывы</p>
+					<ReviewCard></ReviewCard>
+
+					<!-- <p class="card__content-rewiew">Отзывы</p>
 					<div class="card__content-rewiew-card">
 						<div class="card__content-rewiew-card-upper">
 							<p class="card__content-rewiew-name">Андреев Павел</p>
@@ -144,10 +146,12 @@
 							Лучшая клубника которую я ел . в жизни, всем советую!! Прекрасно
 							подошла к вину вместе с хумусом.
 						</p>
-					</div>
+					</div> -->
 				</div>
 			</div>
 		</section>
+		<script src="/src/js/components/reviewCard.js"></script>
+
 		<script type="module" src="/src/js/main.js"></script>
 	</body>
 </html>
