--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 							<span class="hero__nav-location-city">Москва</span>
 						</a>
 					</div>
-					<a class="hero__nav-btn" href="basket"
+					<a class="hero__nav-btn" href="/src/pages/basket.html"
 						><img src="./src/assets/icons/shopping-basket.svg" alt="shop" />
 						<span class="hero__nav-btn_order">Ваш заказ </span
 						><span class="hero__nav-price">9450 ₽</span>
